# Docker_3D_Models_Hosting

./: README.md  pyproject.toml  update_docker_image.py
.github/workflows/: deploy_render_build.yml  docker_update_image.yml
deployments/: last_deployed_digest.txt
